# DoD-v2

./: CLAUDE.md  langgraph_with_llm.py  main.py  pyproject.toml  pytest.ini
backend/: .env.example  __init__.py  main.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/graphs/: __init__.py  code_analysis_graph.py
backend/app/nodes/: __init__.py  code_analysis_nodes.py  sql_analysis_nodes.py
backend/app/utils/: __init__.py  code_executor.py  error_handler.py  report_generator.py  sql_executor.py  state_manager.py
backend/data/raw/: test_data.csv  test_data.xlsx
backend/docs/: ERROR_HANDLING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  SQL_QUERY_GUIDE.md
backend/examples/: excel_analysis_example.py  sql_query_example.py
backend/scripts/: init_database.py
backend/tests/: __init__.py  basic_langgraph.py  test_excel_simple.py  test_nodes.py  test_sql_basic.py  test_sql_standalone.py
backend/tests/manual/: test_single_node.py
